fix: Vercel 배포 HWP 다운로드 404 오류 해결
- HWP 파일명을 application-form.hwp로 단순화
- Next.js 설정에 HWP 파일 헤더 추가
- .gitignore 수정하여 application-form.hwp 포함
- 다운로드 경로 업데이트

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# hwp files
+# hwp files (except application form)
 *.hwp
-node_modules
+!public/application-form.hwp
